<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSinglePlace"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="8dp"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/tvResultHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_medium"
        android:maxLength="24"
        android:maxLines="1"
        android:textColor="@color/hint_text_color"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sample_atm" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="1"
        android:textColor="@color/hint_text_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResultHeading"
        tools:text="@string/sample_address" />

    <RatingBar
        android:id="@+id/rbRatings"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:progressBackgroundTint="@color/navigationDefault"
        android:secondaryProgressTint="@color/navigationDefault"
        android:progressTint="@color/rating_color"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddress" />

    <TextView
        android:id="@+id/tvRatingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/hint_text_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/rbRatings"
        app:layout_constraintStart_toEndOf="@id/rbRatings"
        app:layout_constraintTop_toTopOf="@id/rbRatings" />

    <TextView
        android:id="@+id/tvTimings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/hint_text_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbRatings"
        tools:text="@string/sample_timings" />

    <ImageView
        android:id="@+id/ivSpeak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="-8dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/listen_icon"
        android:src="@drawable/icon_speak"
        app:layout_constraintBottom_toBottomOf="@id/tvResultHeading"
        app:layout_constraintStart_toEndOf="@id/tvResultHeading"
        app:layout_constraintTop_toTopOf="@id/tvResultHeading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimings">

        <ImageView
            android:id="@+id/ivDirectionIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/icon_direction"
            android:src="@drawable/icon_directions" />

        <ImageView
            android:id="@+id/ivCallIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/icon_call"
            android:src="@drawable/icon_call" />

        <ImageView
            android:id="@+id/ivSaveIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/icon_save"
            android:src="@drawable/icon_save" />

        <ImageView
            android:id="@+id/ivShareIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_share"
            android:src="@drawable/icon_share" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>