<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvMapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/map_type"
        android:textColor="@color/hint_text_color"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_cancel"
        android:src="@drawable/icon_cancel"
        app:layout_constraintBottom_toBottomOf="@id/tvMapType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMapType" />

    <TextView
        android:id="@+id/tvDefaultMapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/default_map_type"
        android:textColor="@color/hint_text_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:drawableTopCompat="@drawable/icon_default_map"
        app:layout_constraintEnd_toStartOf="@id/tvSatelliteMapType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMapType" />

    <TextView
        android:id="@+id/tvSatelliteMapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/satellite_map_type"
        android:textColor="@color/hint_text_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:drawableTopCompat="@drawable/icon_satellite_map"
        app:layout_constraintEnd_toStartOf="@id/tvTerrainMapType"
        app:layout_constraintStart_toEndOf="@id/tvDefaultMapType"
        app:layout_constraintTop_toBottomOf="@id/tvMapType" />

    <TextView
        android:id="@+id/tvTerrainMapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/terrain_map_type"
        android:textColor="@color/hint_text_color"
        android:textSize="12sp"
        android:textStyle="normal"
        app:drawableTopCompat="@drawable/icon_terrain_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSatelliteMapType"
        app:layout_constraintTop_toBottomOf="@id/tvMapType" />

</androidx.constraintlayout.widget.ConstraintLayout>