<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ATMFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:elevation="8dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSearchIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/icon_search"
                android:paddingVertical="12dp"
                android:src="@drawable/icon_search" />

            <ImageView
                android:id="@+id/ivCloseIcon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/icon_cancel"
                android:paddingVertical="12dp"
                android:src="@drawable/icon_cancel"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:autofillHints="Search Here"
                android:background="@null"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/search_here"
                android:inputType="textPostalAddress"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_text_color"
                android:textSize="16sp"
                android:textStyle="normal"
                android:theme="@android:style/Theme.Holo" />

            <ImageView
                android:id="@+id/ivVoiceSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/icon_voice_search"
                android:focusable="true"
                android:src="@drawable/icon_voice" />

            <ImageView
                android:id="@+id/ivMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="12dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/icon_menu"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/icon_menu" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mcvSearchView"
        tools:itemCount="4"
        tools:listitem="@layout/single_filter" />

    <ImageView
        android:id="@+id/ivLayerIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/icon_layer_fab"
        android:src="@drawable/icon_layer_fab"
        app:layout_constraintEnd_toEndOf="@id/ivDirectionIcon"
        app:layout_constraintStart_toStartOf="@id/ivDirectionIcon"
        app:layout_constraintTop_toBottomOf="@id/rvFilter" />

    <ImageView
        android:id="@+id/ivNorthIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/icon_north_fab"
        android:foregroundGravity="center"
        android:src="@drawable/icon_north_facing_fab"
        app:layout_constraintEnd_toEndOf="@id/ivDirectionIcon"
        app:layout_constraintStart_toStartOf="@id/ivDirectionIcon"
        app:layout_constraintTop_toBottomOf="@id/ivLayerIcon" />

    <ImageView
        android:id="@+id/ivCurrentIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/icon_current_fab"
        android:src="@drawable/icon_location_fab"
        app:layout_constraintBottom_toTopOf="@id/ivDirectionIcon"
        app:layout_constraintEnd_toEndOf="@id/ivDirectionIcon"
        app:layout_constraintStart_toStartOf="@id/ivDirectionIcon" />

    <ImageView
        android:id="@+id/ivDirectionIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/icon_direction_fab"
        android:src="@drawable/icon_direction_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>