<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:paddingStart="0dp"
    android:paddingEnd="16dp"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/tvHeading"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@id/tvHeading"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/tvHeading" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="end"
        android:text="@string/jan_dhan_darshak"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tvHeading">

        <TextView
            android:id="@+id/tvFavouriteLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="24dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/favourite_locations"
            android:textAlignment="viewStart"
            android:textColor="@color/hint_text_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableLeftCompat="@drawable/icon_favourite_location" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="9dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tvMissingBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="24dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/missing_bank"
            android:textAlignment="viewStart"
            android:textColor="@color/hint_text_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableLeftCompat="@drawable/icon_missing_bank" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="9dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tvFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="24dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/feedback"
            android:textAlignment="viewStart"
            android:textColor="@color/hint_text_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableLeftCompat="@drawable/icon_feedback" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="9dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="24dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/faq"
            android:textAlignment="viewStart"
            android:textColor="@color/hint_text_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableLeftCompat="@drawable/icon_help" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="9dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tvAboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="24dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/about_us"
            android:textAlignment="viewStart"
            android:textColor="@color/hint_text_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableLeftCompat="@drawable/icon_about_us" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="9dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tvDisclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="24dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/disclaimer"
            android:textAlignment="viewStart"
            android:textColor="@color/hint_text_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableLeftCompat="@drawable/icon_disclaimer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="9dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tvChangeLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:drawablePadding="24dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/change_language"
            android:textAlignment="viewStart"
            android:textColor="@color/hint_text_color"
            android:textSize="16sp"
            android:textStyle="normal"
            app:drawableLeftCompat="@drawable/icon_language" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="9dp"
            android:background="@color/divider_color" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/version"
        android:textColor="#000000"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/ivCloseButton"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="@id/ivCloseButton" />

    <ImageView
        android:id="@+id/ivCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/icon_cancel"
        android:src="@drawable/icon_close_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>